# GPU-benchmark

./: CMakeLists.txt  README.md
bin-cuda/: cublas_gemm  cuda_fp64_flops  cuda_matrix_add  cuda_memory_bandwidth  cuda_vector_add
include/: benchmark_utils.h  benchmark_utils_cuda.h  hc_compat.h
scripts/: build_cuda.sh  build_hc.sh  run_benchmarks.py  run_suite.sh  run_suite_hc.sh
src/: cublas_gemm.cu  cuda_device_info.cu  cuda_fp64_flops.cu  cuda_matrix_add.cu  cuda_memory_bandwidth.cu  cuda_vector_add.cu  device_info.cu  fp64_flops.cu  hcblas_gemm.cu  matrix_add.cu  memory_bandwidth.cu  vector_add.cu
